logo eklendi deploy edild

--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -41,6 +41,7 @@ flutter:
     - assets/icons/
     - assets/fonts/
     - .env
+    - assets/images/fixparts.png
   
   fonts:
     - family: Roboto
