--- a/frontend/web/manifest.json
+++ b/frontend/web/manifest.json
@@ -1,32 +1,32 @@
 {
-    "name": "autoparts",
-    "short_name": "autoparts",
+    "name": "FixParts - Otomotiv Yedek Parça Stok Yönetim Sistemi",
+    "short_name": "FixParts",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "background_color": "#FFFFFF",
+    "theme_color": "#FF5722",
+    "description": "FixParts - Her Parçada Yanınızdayız",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
         {
-            "src": "icons/Icon-192.png",
+            "src": "icons/fixparts.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "icons/Icon-512.png",
+            "src": "icons/fixparts.png",
             "sizes": "512x512",
             "type": "image/png"
         },
         {
-            "src": "icons/Icon-maskable-192.png",
+            "src": "icons/fixparts.png",
             "sizes": "192x192",
             "type": "image/png",
             "purpose": "maskable"
         },
         {
-            "src": "icons/Icon-maskable-512.png",
+            "src": "icons/fixparts.png",
             "sizes": "512x512",
             "type": "image/png",
             "purpose": "maskable"
