--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -1,16 +1,42 @@
-FROM golang:1.24-alpine
+FROM golang:1.24-alpine AS builder
 
-# Install necessary development tools
-RUN apk add --no-cache gcc musl-dev git ca-certificates tzdata
+# Install necessary build tools
+RUN apk add --no-cache gcc musl-dev git ca-certificates
 
 # Set working directory
 WORKDIR /app
 
-# Copy application files
+# Copy go mod files
+COPY go.mod go.sum ./
+
+# Download dependencies
+RUN go mod download
+
+# Copy source code
 COPY . .
 
 # Build the application
-RUN go build -o main ./cmd/server/main.go
+RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o main ./cmd/server/main.go
+
+# Final stage
+FROM alpine:latest
+
+# Install necessary runtime dependencies
+RUN apk --no-cache add ca-certificates tzdata
+
+# Create non-root user
+RUN adduser -D -g '' appuser
+
+WORKDIR /app
+
+# Copy binary from builder
+COPY --from=builder /app/main .
+
+# Set ownership
+RUN chown -R appuser:appuser /app
+
+# Use non-root user
+USER appuser
 
 # Expose application port
 EXPOSE 8080
